# demo

./: CMakeLists.txt  README.md
config/: config.yaml
lib/pkgconfig/: yaml-cpp.pc
src/: main.cpp
